# python-orgflow-clean-api

./: .env  .gitignore  Makefile  alembic.ini  app-api-entrypoint.sh  dynaconf.toml  example.env  pyproject.toml  server-api-entrypoint.sh
app/core/application/dto/: base.py  file.py  organization.py  organization_member.py  project.py  user.py
app/core/application/services/: auth.py  entity_event.py  file.py  organization.py  organization_member.py  orgnaization.py  permission.py  project.py  user.py
app/core/config/: __init__.py  env.py
app/core/exceptions/: auth.py  base.py  entity.py  permission.py  validation.py
app/core/models/: __init__.py  base.py  entity_event.py  event.py  file.py  organization.py  organization_member.py  permission.py  project.py  user.py
app/core/models/base/: __init__.py  base.py  entity.py  helpers.py
app/infrastructure/common/: background.py  event_bus.py
app/infrastructure/database/: providers.py
app/infrastructure/database/builders/: base.py  file.py  organization.py  organization_member.py  project.py  user.py
app/infrastructure/database/helpers/: data.py  entity.py
app/infrastructure/database/projection/: organization.py  organization_member.py  (+2 more)
app/infrastructure/producer/: file.py
app/infrastructure/rabbit/: broker.py
app/presentation/app_api/: app.py
app/presentation/server_api/: app.py
app/run/app_api/: app.py
app/run/file_compress_worker/: app.py  providers.py
app/run/server_api/: app.py  providers.py
app/run/shared/: providers.py
deploy/: app-api.Dockerfile  file-compress-worker.Dockerfile
deploy/compose/: docker-compose.infra.yml  docker-compose.yml
(+64 files in other folders)
